--- a/Stylesheets/Stylesheet.css
+++ b/Stylesheets/Stylesheet.css
@@ -101,3 +101,61 @@ aside ul li
 {
     list-style-type: none;
 }
+
+P.special
+        {
+            font-family: "Arial";
+            font-size: 20px;
+            text-shadow: 5px 5px 5px red;
+            font-weight: 500;
+            font-style: italic;
+            text-align: center;
+            border-color: red;
+            border-style:dashed;
+            position: fixed;
+            top:20px;
+            right:20px;
+            padding: 1em;
+            Margin:1em;
+            color: white;
+            
+        }
+        
+        P.Easter
+        {
+            
+          position: absolute;
+            bottom: 20px;
+            right:20px;
+            text-shadow: 5px 5px 5px red;
+            text-align: center;
+            border-style: dashed;
+            border-color: red;
+            color:white;
+            
+        }
+tr 
+{
+    font-size: 1.5em;
+}
+form {
+    color: white;
+}
+
+video {
+    background-color: transparent;
+}
+
+body
+        {
+        
+        background-image:url(Images/Contact%20us%20page%20Background%20Image.jpg);
+        background-color: darkblue;
+        background-repeat: no-repeat;
+        }
+
+#Contact us page background image 
+{
+    width: 100%;
+    height: 100%;
+}
