--- a/Stylesheets/Stylesheet.css
+++ b/Stylesheets/Stylesheet.css
@@ -70,7 +70,7 @@ footer ul li
 footer p
 {
     color: white;
-    text-align: center;
+    text-align:center;
 }
 #active {
     border-color: red;
@@ -145,17 +145,7 @@ form {
 video {
     background-color: transparent;
 }
-
-body
-        {
-        
-        background-image:url(Images/Contact%20us%20page%20Background%20Image.jpg);
-        background-color: darkblue;
-        background-repeat: no-repeat;
-        }
-
-#Contact us page background image 
+p 
 {
-    width: 100%;
-    height: 100%;
+    text-emphasis-position: above;
 }
